src/test/deca/syntax/invalid/accolade.deca
// Doit renvoyer une erreur car manque une accolade

{
    int a = 4;
